# AD2S

./: .gitignore  README.md  config.yaml  pyproject.toml
baselines/: __init__.py  dlutils.py  knn_detector.py  naive_bayesian.py  rrcf_detector.py  rshash_detector.py  svelte.py  tranad.py
data/: syn_dataset1.csv  syn_dataset2.csv  syn_dataset3.csv  syn_dataset4.csv
data/cases/: case1.csv  case2.csv
experiments/ablation/: ablation.csv  ablation.py
experiments/case_study/: case_study.ipynb
experiments/comparison/: comparsion.py
experiments/concept_drift/: concept_drift.ipynb
experiments/efficiency/: cd_diagram.py  diagram.ipynb  execution_time.csv  mem_usage.csv
experiments/parameters_n_chains/: dataset1.csv  dataset2.csv  dataset3.csv  dataset4.csv  parameters_n_chains.ipynb
src/: __init__.py  ad2s.py  base_detector.py
utils/: synthetic.py  util.py
